css/common.css
html {
    /*margin: 0;*/
    /*padding: 0;*/
    text-shadow: 0.0135em 0.0135em 0 #160315;

    font: lighter 100%/1.4 'Roboto', sans-serif;
}

.footer-h3 {
    font-weight: 300;
    font-size: 15px;
    text-align: center;
}

.footer-h2 {
    font-weight: 300;
    font-size: 19px;
    text-align: center;
}

.read-more {
    margin: 5px;
}

.headi{
    text-align: center;
}
.experience {
    background: #A84343;
    margin-left: 100px;
    border-radius: 3px;
    text-align: center;
    width: 350px;
    height: 200px;
    border: 20px;
}

.company {
    font-size: large;
    color: white;
    text-transform: uppercase;
}

.date {
    font-size: medium;
    color: silver;
}

.title {
    font-size: x-large;
    color: #E8F067;
}

div.excerpt {
    text-align: left;
    font-size: 11pt;
    margin-left: 10px;
    margin-right: 10px;
}

p {
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

.default-primary-color { background: #D1D0CC; }
.primary-text-color    { color: white; }
.secondary-text-color  { color: #A84343; }

